# nsc

./: .gitignore  .gitmodules  .ignore  CHANGES  Makefile  Makefile.in  TODO  configure  configure.in  io_pipe.c  io_pipe.h  nsc.c  nsc.h  nsc.spec.in
certs/ca/: makefiles.sh
